--- a/index.html
+++ b/index.html
@@ -7,25 +7,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
     <link href="https://fonts.googleapis.com/css?family=Rubik"
-rel="stylesheet">
+    rel="stylesheet">
     <script src="main.js"></script>
 </head>
 <body>
     <header>
-        <div class="header">
-            <div class="logo"></div>
+        <section class="header">
+            <a href="https://adalab.es/"><div class="logo"></div></a>
             <nav class="menu">
                 <ul class="list">
                     <li class="list-item"><a href="#blog" class="btn btn-blog">BLOG</a> </li>
-                    <li class="list-item"><a href="#contacto" class="btn btn-contacto">CONTACTO</a></li>
+                    <li class="list-item"><a href="#contacto" class="btn btn-contact">CONTACTO</a></li>
                 </ul>
             </nav>
-        </div>
+        </section>
     </header>
     <main>
-        <div class="main">
-            <p class="CDD">Creando <br> Diversidad <br> Digital</p>
-        </div>
+        <section class="main">
+            <h1 class="CDD">Creando Diversidad Digital</h1>
+        </section>
     </main>
     
 </body>
