Finish extra homework #1

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             <h1 class="CDD">Creando Diversidad Digital</h1>
         </section>
     </main>
-    
+    <footer>
+        <section class="footer">
+            <div class="copy">&copy; 2018 Adalab.</div>
+        </section>
+    </footer>
 </body>
 </html>
